styling done, filter fo in stock wip...

--- a/src/App.css
+++ b/src/App.css
@@ -38,20 +38,52 @@
   }
 }
 
-#search {
-  margin-bottom: 24px;
-  width: 600px;
+h1, h4 {
+  text-align: center;
 }
+
+.flex {
+  display: flex;
+}
+
+.row {
+  flex-direction: row;
+}
+
+#search-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 24px;
+  width: 100%;
+}
+
+#search-field {
+  width: 100%;
+}
+
+input {
+  height: 24px;
+}
+
 table {
-  width: 600px;
+  width: 100%;
+  border-spacing: 0px;
 }
 
 th, td {
   text-align: left;
+  padding-left: 8px;
   height: 36px;
+  width: 50%;
+  border-bottom: 1px solid lightgrey;
 }
 
-tr {
-  /* background-color: #61dafb; */
-  border: 1px solid black;
+th {
+  background-color: lightgrey;
+}
+
+.checkbox-container {
+    align-items: center;
 }
